# Dispatch

./: Cargo.toml  README.md  REFACS.md
src/: config.rs  database.rs  main.rs  models.rs  state.rs
src/api/: mod.rs
src/ui/: dispatcher.rs  helpers.rs  key_value_editor.rs  layout.rs  mod.rs  reducer.rs  request_bar.rs  request_tabs.rs  response_view.rs  sidebar.rs  status_bar.rs  styles.rs  widgets.rs  window.rs
