[package]
name = "dispatch"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }

adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }

sourceview5 = "0.9"

reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"

 glib = "0.18"
